More fixes for horizontal scroll on mobile.

--- a/app/scss/decorate.scss
+++ b/app/scss/decorate.scss
@@ -1,6 +1,6 @@
 @import 'base';
 
-html {
+html, body {
   overflow-x: hidden;
 }
 
